# DENGINE

./: .clang-format  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/graphics/example/: CMakeLists.txt  graphics_example.cpp
modules/graphics/include/graphics/: gcontext.hpp  gobject.hpp  gwindow.hpp
modules/graphics/src/: gcontext.cpp  gobject.cpp  gwindow.cpp
modules/graphics/test/: CMakeLists.txt  test_all.cpp  test_penis.hpp
src/: main.cpp
